<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- Layout -->
    <string name="toLayout">转到布局</string>
    <string name="toLinearLayout">转到线性布局</string>
    <string name="toRelativeLayout">转到相对布局</string>
    <string name="toTableLayout">转到表格布局</string>
    <string name="toFrameLayout">转到帧布局</string>
    <string name="linearLayout">这个是线性布局</string>
    <string name="relativeLayout">这个是相对布局</string>
    <string name="tableLayout">这个是表格布局</string>
    <string name="frameLayout">这个是帧布局</string>
    <string name="showtoast">显示提示信息</string>
    <string name="toSpinner">下拉列表</string>
    <string name="toTab">Tab选项卡</string>
    <string name="toDatePickerAndTimePicker">DatePicker和TimePicker</string>
    <string name="toAlertDialogActivity">Dialog</string>

    <!-- LinearLayout -->
    <string name="linearbtn1">线性按钮1</string>
    <string name="linearbtn2">线性按钮2</string>
    <string name="linearbtn3">线性按钮3</string>
    <string name="linearbtn4">线性按钮4</string>
    <string name="linearwarn">后面的第四个Button已经被挡住</string>

    <!-- TableLayout -->
    <string name="username">用户名</string>
    <string name="inputusername">请输入用户名</string>
    <string name="password">密码</string>
    <string name="inputnumberpassword">只能输入数字密码</string>
    <string name="number">数字</string>
    <string name="inputnumber">只能输入数字</string>
    <string name="regiser">注册</string>

    <!-- toComponent -->
    <string name="toComponent">组件</string>
    <string name="toNotification">Notification</string>
    <string name="toExpandableListView">可展开的列表组件</string>
    <string name="toProgressDialog">ProgressDialog</string>
    <string name="toCheckboxAndRadio">单选多选</string>

    <!-- Spinner -->
    <string name="spinnnerdemo">下拉列表示例</string>
    <string name="showchoosespinnner">选择的血型是：</string>
    <string name="subject">科目如下：</string>

    <!-- Dialog -->
    <string name="btnGeneral">普通对话框</string>
    <string name="btnButtons1">多按钮的普通对话框1</string>
    <string name="btnButtons2">多按钮的普通对话框2</string>
    <string name="btnListView">列表选择对话框</string>
    <string name="btnListViewSingle">单选列表选择对话框</string>
    <string name="btnListViewMulti">多选列表选择对话框</string>
    <string name="btnProgressDialog">滚动等待对话框</string>
    <string name="btnProgressDialogH">进度条对话框</string>
    <string name="btnCustomDialog">自定义对话框</string>

    <!-- Tab -->
    <string name="search_key">请输入搜索关键字</string>
    <string name="search_btn">开始检索</string>
    <string name="imagedescription">图片描述(ImageView必须要有)</string>

    <!-- AdapterAndListView -->
    <string name="toAdapterAndListView">转到Adapter和ListVew</string>
    <string name="toArrayAdapter">转到ArrayAdapter</string>
    <string name="toSimpleAdapter">转到SimpleAdapter</string>
    <string name="toBaseAdapter">转到BaseAdapter</string>
    <string name="toEntries">直接用entries</string>
    <string name="toNoEntries">不用entries</string>

    <!-- Service -->
    <string name="toService">转到Service</string>
    <string name="startService">用startService启动Service</string>
    <string name="toStartFirstService">启动第一个Service</string>
    <string name="toStopFirstService">关闭第一个Service</string>
    <string name="toStartSecondService">启动第二个Service</string>
    <string name="toStopSecondService">关闭第二个Service</string>
    <string name="bindService">用bindService启动Service</string>
    <string name="toBindThirdService">绑定第三个Service</string>
    <string name="toUnBindThirdService">解绑第三个Service</string>
    <string name="toGetThirdServiceStatus">获取第三个Service允许状态</string>
    <string name="toMusic">转向音乐</string>

    <!-- toBroadCast -->
    <string name="toBroadCast">BroadCast</string>
    <string name="toSendBroadCast">发送普通广播</string>
    <string name="btnBasicSendOrdered">发送有序广播</string>

    <!-- SharedPreferences -->
    <string name="to_SharedPreferences">转到SharedPreferences</string>
    <string name="read_SharedPreferences">开始读SharedPreferences</string>
    <string name="write_SharedPreferences">开始写SharedPreferences</string>
    <string name="to_Get_SharedPreferences_From_AnotherProject">从其他应用获得SharedPreferences</string>
    <string name="to_Get_SharedPreferences">获得SharedPreferences</string>
    <string name="et_sharedPreferences">请输入要存储的sharedPreferences值</string>

    <!-- toApplication -->
    <string name="toApplication">转向应用</string>
    <string name="to_GetWeather">GET方式天气预报</string>
    <string name="ed_cityaddress">请输入查看的城市名称</string>
    <string name="toGetWeather">查看</string>
    <string name="tv_imgInformation">信息：</string>
    <string name="to_PostWeather">POST方式天气预报</string>
    <string name="to_imageOnline">网络图片查看器</string>
    <string name="tv_imageaddress">请输入图片的地址</string>
    <string name="ed_imageaddress">请输入图片的地址</string>
    <string name="toVisitImg">访问图片</string>
    <string name="imgis">图片是</string>
    <string name="toMusic1">音乐盒</string>
    
    <!-- toIntent -->
    <string name="toIntent">转向Intent传递对象</string>
    <string name="toSerializable">实现Serializable接口</string>
    <string name="toParcelable">实现Parcelable接口</string>
    <string name="toImplicitIntent">隐式Intent</string>
    <string name="tv_implicit">隐式Intent</string>
    <string name="toImplicitIntentError">隐式Intent异常是抛出异常</string>
    <string name="toBaidu">打开百度</string>
    <string name="toAnotherApplication">打开其他的应用</string>

    <!-- toThread -->
    <string name="toThread">转向多线程</string>
    <string name="startHandler">启动Handle</string>
    <string name="tv_before_handler">启动线程前</string>

    <!-- SQLite -->
    <string name="toSQLite">SQLite</string>
    <string name="toContentValues">在SQLite中使用ContentValues</string>

    <!-- File -->
    <string name="toFile">转到File</string>
    <string name="toSDCard">转到sdcard</string>
    <string name="toFileIO">转到File存储</string>
    <string name="ed_write">输入要保存的内容</string>
    <string name="save">写文件</string>
    <string name="ed_read"></string>
    <string name="read">读文件</string>

    <!-- toDail -->
    <string name="toDail">拨打电话</string>
    <string name="title_activity_menu">MenuActivity</string>

</resources>