<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startService" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toStartFirstService"
        android:text="@string/toStartFirstService" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toStopFirstService"
        android:text="@string/toStopFirstService" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toStartSecondService"
        android:text="@string/toStartSecondService" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toStopSecondService"
        android:text="@string/toStopSecondService" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bindService" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toBindThirdService"
        android:text="@string/toBindThirdService" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toUnBindThirdService"
        android:text="@string/toUnBindThirdService" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toGetThirdServiceStatus"
        android:text="@string/toGetThirdServiceStatus" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toMusic"
        android:text="@string/toMusic" />
</LinearLayout>