<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toLinearLayout"
        android:text="@string/toLinearLayout" />

    <Button
        android:id="@+id/toRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toRelativeLayout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toTableLayout"
        android:text="@string/toTableLayout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toFrameLayout"
        android:text="@string/toFrameLayout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toShowToast"
        android:text="@string/showtoast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toSpinner"
        android:text="@string/toSpinner" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toTab"
        android:text="@string/toTab" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toDatePickerAndTimePicker"
        android:text="@string/toDatePickerAndTimePicker" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toAlertDialogActivity"
        android:text="@string/toAlertDialogActivity" />

</LinearLayout>