<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_cityname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_cityaddress" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="toGetWeather"
        android:text="@string/toGetWeather" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/tv_imgInformation" />

</LinearLayout>