<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="read_SharedPreferences"
        android:text="@string/read_SharedPreferences" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="write_SharedPreferences"
        android:text="@string/write_SharedPreferences" />

    <EditText
        android:id="@+id/et_sharedPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_sharedPreferences" />

</LinearLayout>