<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--
   TabHost的id必须是android:id="@android:id/tabhost"
   TabWidget的id必须是android:id="@android:id/tabs"
    -->
    <!-- FrameLayout的id必须是android:id="@android:id/tabcontent" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!-- 1 -->

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagedescription"
                android:src="@drawable/ic_launcher" />

            <!-- 2 -->

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <AnalogClock
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp" >
                </AnalogClock>

                <DigitalClock
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal" >
                </DigitalClock>
            </LinearLayout>

            <!-- 3 -->

            <TextView
                android:id="@+id/personlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- 4 -->

            <LinearLayout
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/search_key" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_btn" >
                </Button>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>